master/channelarchiver/out
Removing old build directory
Removing old work directory
BUILD START: channelarchiver-0.0.4.post5-5_g365f325_np19py34
Fetching package metadata: ........
Solving package specifications: .Cloning into '/home/ericdill/miniconda/conda-bld/work'...
done.
running build
running build_py
creating build
creating build/lib
creating build/lib/channelarchiver
copying channelarchiver/plot_channels.py -> build/lib/channelarchiver
copying channelarchiver/__init__.py -> build/lib/channelarchiver
copying channelarchiver/channelarchiver.py -> build/lib/channelarchiver
copying channelarchiver/utils.py -> build/lib/channelarchiver
copying channelarchiver/structures.py -> build/lib/channelarchiver
copying channelarchiver/codes.py -> build/lib/channelarchiver
copying channelarchiver/exceptions.py -> build/lib/channelarchiver
copying channelarchiver/models.py -> build/lib/channelarchiver
running install
running bdist_egg
running egg_info
creating channelarchiver.egg-info
writing channelarchiver.egg-info/PKG-INFO
writing dependency_links to channelarchiver.egg-info/dependency_links.txt
writing top-level names to channelarchiver.egg-info/top_level.txt
writing requirements to channelarchiver.egg-info/requires.txt
writing manifest file 'channelarchiver.egg-info/SOURCES.txt'
reading manifest file 'channelarchiver.egg-info/SOURCES.txt'
reading manifest template 'MANIFEST.in'
writing manifest file 'channelarchiver.egg-info/SOURCES.txt'
installing library code to build/bdist.linux-x86_64/egg
running install_lib
running build_py
creating build/bdist.linux-x86_64
creating build/bdist.linux-x86_64/egg
creating build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/plot_channels.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/__init__.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/channelarchiver.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/utils.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/structures.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/codes.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/exceptions.py -> build/bdist.linux-x86_64/egg/channelarchiver
copying build/lib/channelarchiver/models.py -> build/bdist.linux-x86_64/egg/channelarchiver
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/plot_channels.py to plot_channels.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/__init__.py to __init__.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/channelarchiver.py to channelarchiver.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/utils.py to utils.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/structures.py to structures.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/codes.py to codes.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/exceptions.py to exceptions.cpython-34.pyc
byte-compiling build/bdist.linux-x86_64/egg/channelarchiver/models.py to models.cpython-34.pyc
creating build/bdist.linux-x86_64/egg/EGG-INFO
copying channelarchiver.egg-info/PKG-INFO -> build/bdist.linux-x86_64/egg/EGG-INFO
copying channelarchiver.egg-info/SOURCES.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying channelarchiver.egg-info/dependency_links.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying channelarchiver.egg-info/requires.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
copying channelarchiver.egg-info/top_level.txt -> build/bdist.linux-x86_64/egg/EGG-INFO
creating dist
creating 'dist/channelarchiver-0.0.4-py3.4.egg' and adding 'build/bdist.linux-x86_64/egg' to it
removing 'build/bdist.linux-x86_64/egg' (and everything under it)
Processing channelarchiver-0.0.4-py3.4.egg
Copying channelarchiver-0.0.4-py3.4.egg to /home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages
Adding channelarchiver 0.0.4 to easy-install.pth file

Installed /home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/channelarchiver-0.0.4-py3.4.egg
Processing dependencies for channelarchiver==0.0.4
Searching for tzlocal==1.1.2
Best match: tzlocal 1.1.2
Processing tzlocal-1.1.2-py3.4.egg
Adding tzlocal 1.1.2 to easy-install.pth file

Using /home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/tzlocal-1.1.2-py3.4.egg
Searching for pytz==2015.2
Best match: pytz 2015.2
Adding pytz 2015.2 to easy-install.pth file

Using /home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages
Finished processing dependencies for channelarchiver==0.0.4
*** Error compiling '/home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/PyQt4/uic/port_v2/invoke.py'...
  File "/home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/PyQt4/uic/port_v2/invoke.py", line 41
    except IOError, e:
                  ^
SyntaxError: invalid syntax

*** Error compiling '/home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/PyQt4/uic/port_v2/load_plugin.py'...
  File "/home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/PyQt4/uic/port_v2/load_plugin.py", line 41
    except Exception, e:
                    ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    fontconfig:      2.11.1-3        
    freetype:        2.5.2-0         
    libpng:          1.5.13-1        
    libxml2:         2.9.0-0         
    matplotlib:      1.4.3-np19py34_1
    numpy:           1.9.2-py34_0    
    openssl:         1.0.1k-1        
    pip:             6.1.1-py34_0    
    pyparsing:       2.0.3-py34_0    
    pyqt:            4.11.3-py34_1   
    python:          3.4.3-0         
    python-dateutil: 2.4.2-py34_0    
    pytz:            2015.2-py34_0   
    qt:              4.8.6-1         
    readline:        6.2-2           
    setuptools:      15.0-py34_0     
    sip:             4.16.5-py34_0   
    six:             1.9.0-py34_0    
    sqlite:          3.8.4.1-1       
    system:          5.8-2           
    tk:              8.5.18-0        
    tzlocal:         1.1.2-py34_0    
    xz:              5.0.5-0         
    zlib:            1.2.8-0         

Linking packages ...
[                    ]|                                                  |   0%[libpng              ]|                                                  |   0%[openssl             ]|##                                                |   4%[readline            ]|####                                              |   8%[sqlite              ]|######                                            |  12%[system              ]|########                                          |  16%[tk                  ]|##########                                        |  20%[xz                  ]|############                                      |  25%[zlib                ]|##############                                    |  29%[freetype            ]|################                                  |  33%[libxml2             ]|##################                                |  37%[fontconfig          ]|####################                              |  41%[qt                  ]|######################                            |  45%[numpy               ]|#########################                         |  50%[pyparsing           ]|###########################                       |  54%[python              ]|#############################                     |  58%[pytz                ]|###############################                   |  62%[setuptools          ]|#################################                 |  66%[sip                 ]|###################################               |  70%[six                 ]|#####################################             |  75%[pip                 ]|#######################################           |  79%[pyqt                ]|#########################################         |  83%[python-dateutil     ]|###########################################       |  87%[tzlocal             ]|#############################################     |  91%[matplotlib          ]|###############################################   |  95%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
checkout: u'master'
==> git log -n1 <==

commit 365f3253b6a7233ab05761106f713bee27ffad5c
Merge: 53bf081 e542577
Author: Thomas A Caswell <tcaswell@gmail.com>
Date:   Fri Jan 23 13:52:20 2015 -0500

    Merge pull request #1 from danielballan/remove-mpl-dep
    
    BLD : Make matplotlib an optional dependency.


==> git describe --tags --dirty <==

v0.0.4-5-g365f325


==> git status <==

# On branch master
nothing to commit (working directory clean)


Package: channelarchiver-0.0.4.post5-5_g365f325_np19py34
source tree in: /home/ericdill/miniconda/conda-bld/work
found egg: /home/ericdill/miniconda/envs/_build/lib/python3.4/site-packages/channelarchiver-0.0.4-py3.4.egg
compiling .pyc files...
